translate English to German

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row clearfix">
       <div class="column full">
-        <h1>Contacts</h1>
+        <h1>Kontakt</h1>
       </div>
     </div>
   </div>
@@ -14,13 +14,15 @@
   <div class="container">
     <div class="row clearfix">
       <div class="column two-fourth">
+        <!--
         <p>Sudoku ist eines der beliebtesten Zahlenrätsel. Das Spiel wird regelmäßig in den Zeitungen und 
         Zeitschriften auf der ganzen Welt veröffentlicht. Extra für Sie haben wir die Online-Version des 
         klassischen Sudoku-Spiels entwickelt. Sudoku-Rätsel lösen ist der beste Weg, sich zu konzentrieren 
         und die Freizeit nützlich zu verbringen.</p>
 
         <p>Welt veröffentlicht. Extra für Sie haben wir die Online-Version des klassischen Sudoku-Spiels entwickelt. Sudoku-Rätsel lösen ist der beste Weg, sich zu konzentrieren und die Freizeit nützlich zu verbringen.</p>
-
+        -->
+        <p>Deine Anfrage geht direkt an unser Support-Team und wird schnellstmöglich bearbeitet.</p>
         <form class="form">
           <div class="form-control">
             <label for="c-form-email">E-mail</label>
@@ -33,22 +35,23 @@
           </div>
 
           <div class="form-control">
-            <label for="c-form-message" class="top" name="message">Message</label>
+            <label for="c-form-message" class="top" name="message">Nachricht</label>
             <textarea id="c-form-message"></textarea>
           </div>
 
           <div class="form-control">
             <label></label>
-            <button type="button" class="btn" id="c-form-send">Send Message</button>
+            <button type="button" class="btn" id="c-form-send">Absenden</button>
           </div>
         </form>
       </div>
-
+      <!--
       <div class="column fourth desktop">
         <a href="#" class="banner vertical desktop">
           <img src="img/banner-vertical.png" alt="">
         </a>
       </div>
+      -->
     </div>
   </div>
 </div>
