--- a/views/history.erb
+++ b/views/history.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row clearfix">
       <div class="column full">
-        <h1>GESCHICHTE SUDOKU</h1>
+        <h1>Sudokugeschichte</h1>
       </div>
     </div>
   </div>
@@ -14,6 +14,7 @@
   <div class="container">
     <div class="row clearfix">
       <div class="column full">
+        <!--
         <p>Sudoku ist eines der beliebtesten Zahlenrätsel. Das Spiel wird regelmäßig in den Zeitungen und 
         Zeitschriften auf der ganzen Welt veröffentlicht. Extra für Sie haben wir die Online-Version des 
         klassischen Sudoku-Spiels entwickelt. Sudoku-Rätsel lösen ist der beste Weg, sich zu konzentrieren 
@@ -34,6 +35,25 @@
           <img class="image" src="img/img-video.png" alt="Video">
         </div>
       </div>
+      -->
+      
+      <p>Fast jedes populäre Spiel hat seine Heimat. Man nennt zum Beispiel England die Heimat des Fußballs, und Schach erschien in Indien (es ist zumindest die allgemein übliche Version der Geschichte).</p>
+      <p>Und was ist mit der Geschichte und Fakten von Sudoku? Wir bieten Sie an, dieses Spiel näher kennenzulernen und durch alle Phasen von Entwicklung ihrer Popularität zu gehen.</p>
+      <img class="image floated" src="img/geschichte/image14.jpg" alt="Sudokugeschichte">
+      <p><b>1. Jahrhundert nach Christus.</b> Es erschien ein Zahlenspiel mit einem kleinen Quadrat (nur 3 x 3 Zellen) in China.  Laut den Spielregeln sollte man die Zahlen von 1 bis 9 in diesen Quadrat so einschreiben, dass die Summe in jeder Zeile, Spalte und in jeder Diagonal 15 gleich sein sollte. Man kann sagen, es ist die Zeit wenn die Geschichte von Sudoku ihren Anfang nimmt.</p>
+      <p><b>17. Jahrhundert. Die Zeit von Zahlen.</b> Leonhard Euler, ein Schweizer Mathematiker, Ingenieur und Physiker erfand das Spiel, das er "Lateinisches Quadrat" genannt hat. In seinem Archiv hat man Notizen gefunden, die die Information über ein “magisches Quadrat” mit einer bestimmten Zahl von Zeilen enthielt (Die besondere Aufmerksamkeit hat er den Zahlen 9, 16, 25 und 36 geschenkt).</p>
+      <p>Doch der geniale Mathematiker hat dieses Spiel auch weiterentwickelt. Er hat die Arbeit "Wissenschaftliche Erforschung neuer Sorten vom magischen Quadrat" geschrieben, wo Euler Zahlen mit Buchstaben ersetzt hat. Und auf diese Weise hat er ein griechisch-lateinisches Quadrat bekommen.</p>
+      <p>Warum verschweigt Sudoku Geschichte diese Tatsache? Die Sache ist, dass sogar der Mathematiker selbst mit einem Problem konfrontiert hat — wie man Symbole kombinieren kann, so dass ein Symbol in keiner Zeile und in keiner Spalte sich wiederholt.</p>
+      <p><b>Die 70er Jahre des 19. Jahrhunderts. Die Blüte von Sudoku.</b> In Nordamerika erschienen spezielle Rätsel, die aus Zahlen bestanden. 1979 erschienen sie in der Zeitschrift “Dell Puzzle Magazine” zum ersten Mal unter dem Namen “Number Place”. Als Autor des "neuen" Puzzle tritt Howard Garns aus, der für sein Zahlenrätsel das Prinzip vom lateinischen Quadrat genommen hat.</p>
+      <p>Aber er arbeitete nur mit der Matrix, die aus 9×9 Zellen bestand. Er hat auch eine neue Regel hinzugefügt. Die Zahlen in inneren Quadraten von 3 × 3 Zellen sollten sich nicht wiederholen.</p>
+      <p><b>1980-1990er Jahre. Japanische Wurzeln.</b> Im Jahr 1984 hat die japanische Firma «Nicoly Inc.» in ihrer Zeitung «Monthly Nicolist» eine Sammlung von Puzzles veröffentlicht. Die Überschrift von dieser Sammlung lautete "Die Zahl kann nur 1 Mal verwendet werden." Es war das erste Mal, wenn der Name Sudoku offiziell veröffentlicht wurde. Es bestand aus zwei japanischen Wörtern: ”su” (Nummer) und “doku” (nur einmal).</p>
+      <p><b>1990er Jahre - heute.</b> Im Jahr 2004 erschien dieses Zahlenrätsel auf den Seiten von “The Times”, und seitdem kann man sie in den Zeitungen und Zeitschriften auf der ganzen Welt finden. Heute bieten einige Verlage kleine Sammlungen an, die ausschließlich Sudoku von verschiedenem Schwierigkeitsgrad gewidmet sind. Und natürlich sind diese Rätsel im Internet zu finden, das zurzeit in fast jedem Haus in unserem Land zu finden ist.</p>
+      <p>Mit dem Aufkommen von Smartphones, hat das Spiel einen würdigen Platz unter den beliebtesten Spielen genommen. Mit der Einführung von Android- und iOS-Geräten ist die Zahl der Fans von Sudoku drastisch erhöht.</p>
+      <p>Jetzt, wenn Sie ein bisschen mehr über Sudoku wissen, <a href="/">spielen</a> Sie und genießen Sie dieses kostenlose Puzzle.</p>
+
+      
+      
+      
 
       <!-- <div class="column fourth desktop">
         <a href="#" class="banner vertical">
