--- a/views/rules.erb
+++ b/views/rules.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row clearfix">
       <div class="column full">
-        <h1>REGELN</h1>
+        <h1>Sudoku Spielregeln</h1>
       </div>
     </div>
   </div>
@@ -13,7 +13,8 @@
 <div class="content marked">
   <div class="container">
     <div class="row clearfix">
-      <div class="column two-fourth">
+      <div class="column">
+        <!--
         <p>Sudoku ist eines der beliebtesten Zahlenrätsel. Das Spiel wird regelmäßig in den Zeitungen und 
         Zeitschriften auf der ganzen Welt veröffentlicht. Extra für Sie haben wir die Online-Version des 
         klassischen Sudoku-Spiels entwickelt. Sudoku-Rätsel lösen ist der beste Weg, sich zu konzentrieren 
@@ -31,13 +32,48 @@
         <p>Neue Ziffern einzugeben und die früher eingegebenen Ziffern zu korrigieren darf man nur in leeren Sudoku-Feldern, die von Anfang an nicht gefüllt waren. Um eine Ziffer zu löschen, wählen Sie die Zelle und drücken Sie die Taste „Löschen“ oder geben Sie ersatzweise eine neue Ziffer ein. Rote Ziffern bedeuten, dass die Spielfelder regelwidrig gefüllt sind. Prüfen Sie das Ganze aufmerksam durch, finden Sie die Fehler und korrigieren Sie sie.</p>
 
         <img class="image" src="img/img-video.png" alt="Video">
+        -->
+        <div class="content-regeln">
+          <p>Das Spielfeld im klassischen Sudoku ist ein Quadrat 9 × 9 Zellen, das in neun kleinere Blocks 3 × 3 Zellen aufgeteilt ist. Somit besteht das ganze Spielfeld aus 81 Zellen. Der Spieler muss freie Zellen mit Ziffern von 1 bis 9 ausfüllen.</p>
+          <p>Lernen Sie auch einige Begriffe aus diesem Spiel kennen, so dass wir eine Sprache mit Ihnen sprechen.</p>
+          <h2>Begriffe</h2>
+          <img class="image image-center" align="center" src="img/regeln/image1.jpg" alt="Sudoku Begriffe">
+          <p><b><span  style="color: #e30613">— Spielfeld</span></b> — ein Zahlenquadrat 9x9, das aus Zellen besteht. Das Spielfeld enthält neun Blocks sowie neun Zeilen und neun Spalten.</p>
+          <p><b><span  style="color: #009fe3">— 3х3-Block</span></b> — ein Block von Zellen 3x3. Das ganze Sudoku besteht aus 9 solchen Blocks.</p>
+          <p><b><span  style="color: #3aaa35">— Zelle</span></b> — das ist das Basiselement von Sudoku Spielfeld. Eine Zelle soll eine Zahl enthalten. Was für die Zahl wird es, das hängt von der Gruppe ab, zu der sie gehört.</p>
+          <p><b><span  style="color: #8d5ba1">— Zeile</span></b> — ein horizontaler Satz aus 9 Zellen.</p>
+          <p><b><span  style="color: #f39200">— Spalte</span></b> — ein vertikaler Satz aus 9 Zellen.</p>
+          <p><b><span  style="color: #ff00ff">— Segment</span></b> — ein vertikaler oder horizontaler Satz aus 3 Zellen in einer Gruppe. Dementsprechend gibt es 6 Segmente in einem Block 3x3 - je drei Segmente in der Zeile und der Spalte.</p>
+          <h2>Sudoku Spielregeln:</h2>
+          <ul>
+            <li>Am Anfang des Spiels sind einige Zellen mit Ziffern von 1 bis 9 ausgefüllt. Sie können diese Ziffern im Spiel nicht ändern.</li>
+            <li>Ein richtig zusammengesetztes Rätsel hat nur eine Lösung.</li>
+            <li>Jede Ziffer kann in einer Zeile nur einmal vorkommen.</li>
+            <img class="image image-center" align="center" src="img/regeln/image2.jpg" alt="So füllt man Sudoku Zeilen richtig aus"><br>
+            <img class="image image-center" align="center" src="img/regeln/image3.jpg" alt="So füllt man Sudoku Zeilen nicht richtig aus">
+            <li>In jeder Spalte kann eine Ziffer nur einmal vorkommen.</li>
+            <div class="container clearfix">
+              <div style="width: 50%; float: left;"><img class="image image-center" align="center" src="img/regeln/image4.jpg" alt="So füllt man Sudoku Spalte richtig aus"></div>
+              <div style="width: 50%; float: left;"><img class="image image-center" align="center" src="img/regeln/image5.jpg" alt="So füllt man Sudoku Spalte nicht richtig aus"></div>
+            </div>
+            <li>In einem kleineren Block 3×3 kann eine Ziffer nur einmal benutzt werden.</li>
+            <div class="container clearfix">
+              <div style="width: 50%; float: left;"><img class="image image-center" align="center" src="img/regeln/image6.jpg" alt="So ist es richtig"></div>
+              <div style="width: 50%; float: left;"><img class="image image-center" align="center" src="img/regeln/image7.jpg" alt="So ist es nicht richtig"></div>
+            </div>
+            <p>Ein Beispiel von Sudoku-Lösung, wo alle Regeln eingehalten sind.</p>
+            <img class="image image-center" align="center"  src="img/regeln/image8.jpg" alt="Ein Beispiel von Sudoku Lösung">
+            <p>Haben Sie sich mit Sudoku Regeln Vertraut gemacht? Fangen Sie an, <a href="https://sudoku-spielen.org/">Sudoku zu spielen!</a></p>
+          </ul>
+        </div>
       </div>
-
+      <!--
       <div class="column fourth desktop">
         <a href="#" class="banner vertical">
           <img src="img/banner-vertical.png" alt="">
         </a>
       </div>
+      -->
     </div>
   </div>
 </div>
