--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,19 +14,32 @@ body {
   background-color: #ffffff;
   position: relative;
   color: #333333; }
+  
+body button {font-family: "Roboto", sans-serif;}
+
+body pre {
+    font-family: "Roboto", sans-serif;
+}
 
 p.text {
   line-height: 1.6; 
   margin: 25px 0 25px 0; }
 
 h1, h2 {
+  
   font-weight: 300;
-  font-size: 30px;
-  color: #333333;
-  margin: 0 0 22px 0; }
+  color: #333333; }
   @media (max-width: 767px) {
     h1, h2 {
-      font-size: 20px; } }
+      font-size: 20px;} }
+h2, h3 {
+  font-weight: 400;
+}
+
+h1 {font-size: 30px;  margin: 0 0 22px 0;}
+h2 {font-size: 23px;}
+h3 {font-size: 20px; color: #434343;}
+      
 
 @media print {
   .header,
@@ -62,6 +75,8 @@ h1, h2 {
     font-size: 12px;
     padding-left: 7px;
     padding-right: 25px;
+    position: relative;
+    left: -24px;
   }
 }
 
@@ -116,7 +131,7 @@ h1, h2 {
     font-weight: normal; }
   .controls .ctrl .btn.new-game {
     margin-left: 5px;
-    padding: 0 15px; }
+    padding: 0 9px; }
     .controls .ctrl .btn.new-game:hover {
       background-color: #133861;
       color: #fff;
@@ -191,6 +206,12 @@ h1, h2 {
     .image {
       width: 100%;
       margin: 0 0 15px 0; } }
+      
+.image-center {
+  clear: both;
+  display: block !important;
+  margin: 0 auto;
+}     
 
 .column {
   margin-bottom: 0px;
@@ -262,8 +283,8 @@ h1, h2 {
     text-transform: none;
     font-weight: 500;
     line-height: 36px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 9px;
+    padding-right: 9px;
     border: none;
     background-color: #ccdff4; }
   .btn.game.paused {
@@ -327,7 +348,12 @@ a {
     .table .col-id {
       width: 3%; }
     .table .col-last {
-      padding-right: 10px; }
+      padding-right: 10px; 
+      display: none;
+    }
+     .table .col-score {
+       padding-right: 7px;
+     }
   }
 
 
@@ -391,8 +417,8 @@ a {
 }
 
 .grid input {
-    width: 57px;
-    height: 57px;
+    width: 56px;
+    height: 56px;
     font-size: 21px;
     font-family: "Roboto", sans-serif;
     cursor: pointer;
@@ -416,7 +442,7 @@ a {
   #pause-btn {
     top: 0px;
     max-width: 150px;
-    left: 86px; }
+    left: 124px; }
   .tngame {
     display: none;
   }
@@ -437,10 +463,11 @@ a {
   .grid-controls {
     width: 531px;
     margin: 0 auto;
+    margin-left: 54px;
   }
   .btn.game {
-    padding-left: 48px;
-    padding-right: 48px;
+    padding-left: 42px;
+    padding-right: 42px;
   }
 }
 
@@ -476,8 +503,8 @@ a {
     height: 50px;
   }
   .btn.game {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 34px;
+    padding-right: 34px;
   }
   .grid-controls {
     width: 468px;
@@ -491,8 +518,8 @@ a {
     height: 40px;
   }
   .btn.game {
-    padding-left: 29px;
-    padding-right: 29px;
+    padding-left: 22px;
+    padding-right: 22px;
   }
   .grid-controls {
     width: 378px;
@@ -506,8 +533,8 @@ a {
     height: 35px;
   }
   .btn.game {
-    padding-left: 24px;
-    padding-right: 23px;
+    padding-left: 17px;
+    padding-right: 17px;
   }
   .grid-controls {
     width: 333px;
@@ -521,13 +548,14 @@ a {
     height: 30px;
   }
   .btn.game {
-    padding-left: 18px;
-    padding-right: 17px;
+    padding-left: 12px;
+    padding-right: 11px;
   }
   .grid-controls {
     width: 288px;
     margin: 0 auto;
   }
+
 }
 
 .grid input:focus {
@@ -811,6 +839,7 @@ a {
             background-color: #2d598a;
             color: #ffffff; }
       .nav .auth-dropdown form input {
+        font-family: "Roboto", sans-serif
         border: none;
         height: 40px;
         font-weight: 700;
@@ -1044,4 +1073,8 @@ div.timer {
 }
 img.jssocials-share-logo {
   height: auto;
+}
+
+.content-regeln p, .content-regeln li {
+  margin: 10px 0 10px 0;
 }
