--- a/views/notfound.erb
+++ b/views/notfound.erb
@@ -5,7 +5,6 @@
   <title>404 Not Found - Sudoku spielen</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="keywords" content="">
   <meta name="description" content="">
   <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
 
@@ -29,7 +28,9 @@
   <div class="container">
     <div class="pumpkin"></div>
     <h1 class="text-center">Sudoku kostenlos online spielen</h1>
+    <form action="/" style="text-align: center;">
+      <button type="submit" class="btn primary game" style="margin: 0 auto;" id="solve-btn">Startseite</button>
+    </form>
   </div>
-
 </body>
 </html>
