--- a/views/raiting.erb
+++ b/views/raiting.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row clearfix">
       <div class="column full">
-        <h1>Rangliste der Spieler</h1>
+        <h1>Rangliste von Sudoku Spielern</h1>
       </div>
     </div>
   </div>
@@ -13,47 +13,61 @@
 <div class="container">
   <div class="row clearfix">
     <div class="column full">
+      <!--
       <p class="text">Sudoku ist eines der beliebtesten Zahlenrätsel. Das Spiel wird regelmäßig in den Zeitungen und 
         Zeitschriften auf der ganzen Welt veröffentlicht. Extra für Sie haben wir die Online-Version des 
         klassischen Sudoku-Spiels entwickelt. Sudoku-Rätsel lösen ist der beste Weg, sich zu konzentrieren 
         und die Freizeit nützlich zu verbringen.</p>
+        -->
+
+      <p class="text">Jeder weiß, dass beim Wettbewerb nicht nur die Teilnahme sondern auch der Gewinn wichtig ist. In unserem Fall sind es mehrere Gewinne. Registrieren Sie sich auf unserer Webseite, verdienen Sie Punkte und bekommen Sie Leader der Rangliste!</p>
+      <p>Die Punkte werden für jede erfolgreiche Lösung angerechnet. Die Punktzahl hängt vom Schwierigkeitsgrad ab:</p>
+      <pre>
+    — Sehr leicht — 1 Punkt;
+    — Leicht — 2 Punkte;
+    — Mittelschwer — 4 Punkte;
+    — Schwer — 8 Punkte;
+    — Sehr schwer — 16.</pre>
+      <p>Jedesmal, wenn Sie Hinweis benutzen, wird die Punktzahl um 10% vermindert. 10 Hinweise und Ihr Gewinn wird zu Null.</p>
+      <p>Sie bekommen eine Null auch wenn Sie Sudoku nicht selbständig lösen sondern auf "Lösen" klicken.</p>
+         
       <div>
         <select>
-          <option value="1">Best players all time</option>
-          <option value="2">Best players this month</option>
+          <option value="1">Beste Spieler in diesem Monat</option>
+          <option value="2">Beste Spieler aller Zeiten</option>
         </select>
       </div>
       <br><br>
       <table class="table" cellspacing="0">
         <thead>
           <th class="col-id text aligned right">#</th>
-          <th class="col-username text aligned left">Username</th>
-          <th class="col-easy text aligned right desktop">Easy</th>
+          <th class="col-username text aligned left">Name</th>
+          <th class="col-easy text aligned right desktop">Sehr leicht</th>
           <th class="col-medium text aligned right">
-            <div class="desktop">Medium</div>
+            <div class="desktop">Leicht</div>
             <div class="mobile">
               <select class="level">
-                <option value="easy">Easy</option>
-                <option value="medium">Medium</option>
-                <option value="hard">Hard</option>
-                <option value="expert">Expert</option>
-                <option value="insane">Insane</option>
+                <option value="easy">Sehr leicht</option>
+                <option value="medium">Leicht</option>
+                <option value="hard">Mittelschwer</option>
+                <option value="expert">Schwer</option>
+                <option value="insane">Sehr schwer</option>
               </select>
             </div>
           </th>
-          <th class="col-hard text aligned right desktop">Hard</th>
-          <th class="col-expert text aligned right desktop">Expert</th>
-          <th class="col-insane text aligned right desktop">Insane</th>
-          <th class="col-score text aligned right">Score</th>
-          <th class="col-last text aligned right">Last Played</th>
+          <th class="col-hard text aligned right desktop">Mittelschwer</th>
+          <th class="col-expert text aligned right desktop">Schwer</th>
+          <th class="col-insane text aligned right desktop">Sehr schwer</th>
+          <th class="col-score text aligned right col-score">Punkte</th>
+          <th class="col-last text aligned right">Letztes Spiel</th>
         </thead>
 
-        <tbody>
+        <tbody id="raiting">
           <% @top_players.each_with_index do |player, index| %>
           <tr>
             <td class="text aligned right"><%= index+1 %></td>
             <% if player.is_guest %>
-            <td class="text medium">Guest #<%= player.name %></td>
+            <td class="text medium">Gast #<%= player.name %></td>
             <% else %>
             <td class="text medium"><%= player.name %></td>
             <% end %>
@@ -62,33 +76,14 @@
             <td class="text aligned right desktop"><%= player.game_counter.hard %></td>
             <td class="text aligned right desktop"><%= player.game_counter.expert %></td>
             <td class="text aligned right desktop"><%= player.game_counter.insane %></td>
-            <td class="text medium aligned right"><%= player.scores %></td>
-            <td class="text col-last aligned right"><%= player.game_counter.updated_at.strftime("%b %d, %Y") %></td>
+            <td class="text medium aligned right col-score"><%= player.scores %></td>
+            <td class="text col-last aligned right"><%= convert_month(player.game_counter.updated_at.strftime("%b %d, %Y")) %></td>
           </tr>
           <% end %>
         </tbody>
       </table>
 
       <br><br><br>
-    </div>
-  </div>
-</div>
-
-<div class="content marked">
-  <div class="container">
-    <div class="row clearfix">
-      <div class="column full">
-        <img class="image floated" src="img/img-index.png" alt="Sudoku">
-        <p>Um der Rangliste hinzufügen zu können, müssen Sie sich anmelden. Nach der Anmeldung werden Sie für jede Sudoku-Lösung Punkte bekommen. Je mehr Punkte Sie bekommen, desto höher werden Sie an der Rangliste sein. Melden Sie sich für das Spiel an, wählen Sie die gewünschte Schwierigkeitsstufe und laden Sie Ihre Freunde ein, mit denen Sie wetteifern können!</p>
-
-        <h1>Spielregeln</h1>
-
-        <p>Um ein Sudoku zu lösen, müssen Sie die leeren Zellen des Spielfeldes mit Ziffern von 1 bis 9 so füllen, dass jede Ziffer in jeder Zeile, Spalte und in jedem 3х3-Block genau einmal vorkommt. Um Sudoku zu spielen, brauchen Sie keine speziellen mathematischen oder rechnerischen Fertigkeiten zu haben.</p>
-
-        <p>Um zu beginnen, wählen Sie die Schwierigkeitsstufe: sehr leicht, leicht, mittelschwer, schwer und sehr schwer. Je höher die Schwierigkeitsstufe ist, desto weniger Zellen werden am Anfang des Spiels mit den Ziffern (von 1 bis 9) gefüllt. Keine Sorge, man kann ein Profi werden, auch wenn man mit einer leichten Stufe beginnt. Je nach der Schwierigkeitsstufe und Übung brauchen Sie von 5 bis 30 Minuten, um ein Sudoku zu lösen. Wir empfehlen Ihnen, sich mit den grundlegenden Lösungstechniken des Sudoku vertraut zu machen.</p>
-
-        <p>Neue Ziffern einzugeben und die früher eingegebenen Ziffern zu korrigieren darf man nur in leeren Sudoku-Feldern, die von Anfang an nicht gefüllt waren. Um eine Ziffer zu löschen, wählen Sie die Zelle und drücken Sie die Taste „Löschen“ oder geben Sie ersatzweise eine neue Ziffer ein. Rote Ziffern bedeuten, dass die Spielfelder regelwidrig gefüllt sind. Prüfen Sie das Ganze aufmerksam durch, finden Sie die Fehler und korrigieren Sie sie.</p>
-      </div>
     </div>
   </div>
 </div>
